components/getFunding/get-funding.scss
@import '../select/mixins.scss';
@import 'include-media/dist/_include-media.scss';

.GetFunding {
  &__wrapper {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
    text-align: center;
    padding: 0;
  }
  &__formWrapper {
    width: 100%;
    max-width: 550px;
    margin: 0 auto;
    margin-bottom: 20px;
  }

  &__header {
    @include headerDesctop();
    margin-bottom: 20px;
    font-family: 'Gilroy', sans-serif;
    font-weight: 800;
    color: #4a4a4a;
    width: 100%;
  }

  &__text {
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    color: #4a4a4a;
    margin-bottom: 20px;
    width: 80%;
  }

  &__footer {
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    color: #1890ff;
    width: 100%;
    margin-bottom: 20px;
  }

  @include media (">=tablet") {
    &__text {
      font-size: 18px;
      line-height: 30px;
    }

    &__footer {
      font-size: 18px;
    }
  }

  @include media("<tablet") {
    &__wrapper {
      height: 200px;
    }

    &__text {
      font-size: 12px;
      line-height: 17px;
      width: 80%;
    }

    &__footer {
      font-size: 12px;
    }
  }

  @include media ("<=375px") {
    &__header {
      @include headerMobile();
      margin-bottom: 10px;
    }
  }
}

